--- a/PizzaHut/default.htm
+++ b/PizzaHut/default.htm
@@ -6,10 +6,14 @@
 
     <!-- jQuery, Angular -->
     <script src="Scripts/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>
-    <script src="Scripts/angular.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>-->
+    <!--<script src="Scripts/angular.js"></script>-->
+    <script src="Scripts/angular.min.js"></script>
     <!-- Bootstrap -->
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />
+    <!--<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />-->
+    <link href="Content/bootstrap-combined.min.css" rel="stylesheet" />
+    <link href="Content/socbuttons.css" rel="stylesheet" />
+    <link href="Content/font-awesome.min.css" rel="stylesheet" />
 
     <!-- AngularStore app -->
     <script src="js/pizza.js" type="text/javascript"></script>
@@ -20,6 +24,8 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <script src="js/user.js"></script>
     <script src="js/order.js"></script>
+    <script src="js/angular-socialshare.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -34,6 +40,15 @@
                     Pizza Hut 
                 </h1>
                 <div ng-view></div>
+                <div class="span5 offset4">
+                    <button class="btn btn-facebook"
+                            socialshare-url="http://localhost:53833/default.htm#/store" socialshare-provider="facebook" socialshare="">
+                        <div id="facebook"></div> | Share on Facebook
+                    </button>
+                    <button class="btn btn-twitter" socialshare-url="http://localhost:53833/default.htm#/store" socialshare-provider="twitter" socialshare="">
+                        <div id="twitter"></div> | Share on Twitter
+                    </button>
+                </div> 
             </div>
         </div>
     </div>
