--- a/PizzaHut/default.htm
+++ b/PizzaHut/default.htm
@@ -6,14 +6,11 @@
 
     <!-- jQuery, Angular -->
     <script src="Scripts/jquery.min.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>-->
-    <!--<script src="Scripts/angular.js"></script>-->
-    <script src="Scripts/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>
+
+    <script src="js/angular-socialshare.js"></script>
     <!-- Bootstrap -->
-    <!--<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />-->
-    <link href="Content/bootstrap-combined.min.css" rel="stylesheet" />
-    <link href="Content/socbuttons.css" rel="stylesheet" />
-    <link href="Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />
 
     <!-- AngularStore app -->
     <script src="js/pizza.js" type="text/javascript"></script>
@@ -24,8 +21,6 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <script src="js/user.js"></script>
     <script src="js/order.js"></script>
-    <script src="js/angular-socialshare.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>
     </head>
 
     <body>
