--- a/PizzaHut/default.htm
+++ b/PizzaHut/default.htm
@@ -11,6 +11,7 @@
     <script src="js/angular-socialshare.js"></script>
     <!-- Bootstrap -->
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css" />
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
     <!-- AngularStore app -->
     <script src="js/pizza.js" type="text/javascript"></script>
@@ -38,7 +39,7 @@
                 <div class="span5 offset4">
                     <button class="btn btn-facebook"
                             socialshare-url="http://localhost:53833/default.htm#/store" socialshare-provider="facebook" socialshare="">
-                        <div id="facebook"></div> | Share on Facebook
+                        <i class="fa fa-facebook"></i> | Share on Facebook
                     </button>
                     <button class="btn btn-twitter" socialshare-url="http://localhost:53833/default.htm#/store" socialshare-provider="twitter" socialshare="">
                         <div id="twitter"></div> | Share on Twitter
