Function of adding images added. New backup of database added. ReadMe added

--- a/PizzaHut/default.htm
+++ b/PizzaHut/default.htm
@@ -36,6 +36,7 @@
                     Pizza Hut 
                 </h1>
                 <div ng-view></div>
+                <!--Buttons for sharing link of PizzaHut. Change link after hosting--> 
                 <div class="span5 offset4">
                     <button class="btn btn-facebook"
                             socialshare-url="http://localhost:53833/default.htm#/store" socialshare-provider="facebook" socialshare="">
